[package]
name = "xgboost"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = """
Bindings to xgboost.
"""
categories = ["api-bindings"]
edition = "2021"

[dependencies]
libc = "0.2"
xgboost-sys = { path = "xgboost-sys", version = "0.1.0" }
derive_builder = "0.11"
indexmap = "1.9.1"
tempfile = "3.1"
log = "0.4"
ndarray="0.15.6"

