[package]
name = "xgboost-rs"
version = "0.1.1"
license = "MIT"
authors = ["Marcus Weber <marcus.wallau@gmail.com>"]
repository = "https://github.com/marweumr/xgboost-rs"
description = """
Bindings to xgboost.
"""
readme = "README.md"

categories = ["api-bindings"]
edition = "2021"

[dependencies]
libc = "0.2"
xgboost-rs-sys = "0.1.1"
derive_builder = "0.11"
indexmap = "1.9.1"
tempfile = "3.1"
log = "0.4"
ndarray = "0.15.6"
